--- a/templates/deploy-model.yml
+++ b/templates/deploy-model.yml
@@ -6,4 +6,4 @@ steps:
       scriptType: bash
       scriptLocation: inlineScript
       inlineScript: |
-        python templates/shared_code/deploy_model_aks.py -f $(inference_deployment_yaml)
+        python templates/shared_code/deploy_model_aks.py -f controller/controller-config.yml
