--- a/templates/deploy-training-pipeline.yml
+++ b/templates/deploy-training-pipeline.yml
@@ -6,4 +6,6 @@ steps:
       scriptType: bash
       scriptLocation: inlineScript
       inlineScript: |
+        set -e
         python templates/shared_code/deploy_training_pipeline.py -f controller/controller-config.yml
+        python templates/shared_code/deploy_pipeline_to_endpoint.py -p $(pipeline_id) -f controller/controller-config.yml
