--- a/templates/deploy-batch-scoring-pipeline.yml
+++ b/templates/deploy-batch-scoring-pipeline.yml
@@ -12,6 +12,7 @@ steps:
         env
         echo "printenv"
         printenv
-        echo "deployed_pipeline_id"
-        echo $DEPLOYED_PIPELINE_ID
-        python templates/shared_code/deploy_pipeline_to_endpoint.py -p $DEPLOYED_PIPELINE_ID -f controller/controller-config.yml
+        echo "pipeline_id"
+        echo $(pipeline_id)
+        echo $PIPELINE_ID
+        python templates/shared_code/deploy_pipeline_to_endpoint.py -p $(pipeline_id) -f controller/controller-config.yml
