--- a/templates/deploy-batch-scoring-pipeline.yml
+++ b/templates/deploy-batch-scoring-pipeline.yml
@@ -6,13 +6,5 @@ steps:
       scriptType: bash
       scriptLocation: inlineScript
       inlineScript: |
-        #set -e
+        set -e
         python templates/shared_code/deploy_batch_scoring_pipeline.py -f controller/controller-config.yml
-        echo "env"
-        env
-        echo "printenv"
-        printenv
-        echo "pipeline_id"
-        echo $(pipeline_id)
-        echo $PIPELINE_ID
-        python templates/shared_code/deploy_pipeline_to_endpoint.py -p $(pipeline_id) -f controller/controller-config.yml
