--- a/templates/get-compute.yml
+++ b/templates/get-compute.yml
@@ -1,3 +1,7 @@
+parameters:
+- name: compute_type
+  type: string
+
 steps:
   - task: AzureCLI@2
     displayName: Get compute
@@ -6,4 +10,4 @@ steps:
       scriptType: bash
       scriptLocation: inlineScript
       inlineScript: |
-        python templates/shared_code/get_compute.py
+        python templates/shared_code/get_compute.py -f controller/controller-config.yml --compute_type ${{ parameters.compute_type }}
