--- a/templates/install-aml-cli.yml
+++ b/templates/install-aml-cli.yml
@@ -1,6 +1,6 @@
 steps:
   - task: AzureCLI@2
-    displayName: Install AML CLI
+    displayName: Install AML CLI v2
     inputs:
       azureSubscription: $(ml_workspace_connection)
       scriptType: bash
@@ -9,4 +9,5 @@ steps:
       inlineScript: |
         set -e # fail on error
         az version
-        az extension add -n azure-cli-ml
+        az extension add -n ml -y
+        az extension update -n ml
