--- a/templates/deploy-managed-online-endpoint.yml
+++ b/templates/deploy-managed-online-endpoint.yml
@@ -7,4 +7,4 @@ steps:
       scriptLocation: inlineScript
       inlineScript: |
         set -e
-        az ml endpoint create -n $(ENDPOINT_NAME) -f ../shared_code/deploy_managed_online_endpoint.yml
+        az ml endpoint create -n $(ENDPOINT_NAME) -f deploy_managed_online_endpoint.yml
