--- a/templates/deploy-managed-online-endpoint.yml
+++ b/templates/deploy-managed-online-endpoint.yml
@@ -8,4 +8,5 @@ steps:
       inlineScript: |
         set -e
         ls
+        pwd
         az ml endpoint create -n $(ENDPOINT_NAME) -f templates/shared_code/deploy_managed_online_endpoint.yml
