--- a/templates/deploy-managed-online-endpoint.yml
+++ b/templates/deploy-managed-online-endpoint.yml
@@ -9,4 +9,4 @@ steps:
         set -e
         ls
         pwd
-        az ml endpoint create -n $(ENDPOINT_NAME) -f templates/shared_code/deploy_managed_online_endpoint.yml
+        az ml endpoint create -n $(endpoint_name) -f templates/shared_code/deploy_managed_online_endpoint.yml
