--- a/templates/install-aml-cli.yml
+++ b/templates/install-aml-cli.yml
@@ -10,3 +10,4 @@ steps:
         set -e # fail on error
         az version
         python -m pip install -U --force-reinstall pip pip install azure-cli==2.29
+        az extension add -n azure-cli-ml
