--- a/templates/register-dataset-cli.yml
+++ b/templates/register-dataset-cli.yml
@@ -8,4 +8,4 @@ steps:
       workingDirectory: code/
       inlineScript: |
         set -e # fail on error
-        az ml dataset create --file azureml/dataset
+        az ml dataset register --file azureml/dataset
