--- a/templates/register-dataset-cli.yml
+++ b/templates/register-dataset-cli.yml
@@ -8,4 +8,4 @@ steps:
       workingDirectory: code/
       inlineScript: |
         set -e # fail on error
-        az ml dataset register --file azureml/dataset
+        az ml dataset register -g $(ml_workspace_rg) -w $(ml_workspace_name) --file azureml/dataset
