--- a/templates/dotnet-install.yml
+++ b/templates/dotnet-install.yml
@@ -2,4 +2,4 @@ steps:
   - task: Bash@3
     displayName: 'Install Dotnet'
     inputs:
-      filePath: templates/shared_code/dotnet_install.sh -c 2.1
+      filePath: templates/shared_code/dotnet_install.sh
